fix(methodology) apply corrections suggested

--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -371,5 +371,13 @@
   author={Ferreira, M},
   year={2015},
   school={Ph. D. thesis, Tecnico Lisboa}
->>>>>>> Stashed changes
+}
+
+@misc{noauthor_measuring_nodate,
+	title = {Measuring {Strain} with {Strain} {Gages}},
+	url = {https://www.ni.com/en-za/innovations/white-papers/07/measuring-strain-with-strain-gages.html},
+	abstract = {This document provides information to help you understand basic strain concepts, how strain gages work, and how to select the right configuration type.},
+	language = {en},
+	urldate = {2022-06-01},
+	file = {Snapshot:C\:\\Users\\samlo\\Zotero\\storage\\ZE79EVL6\\measuring-strain-with-strain-gages.html:text/html},
 }
