f(methodology) add velocity measurement

--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -381,3 +381,12 @@
 	urldate = {2022-06-01},
 	file = {Snapshot:C\:\\Users\\samlo\\Zotero\\storage\\ZE79EVL6\\measuring-strain-with-strain-gages.html:text/html},
 }
+
+
+@misc{noauthor_wind_nodate,
+	title = {Wind {Tunnel} -{Pitot} ({Wind} {Tunnel} {Fundamentals}) : {Wind} energy {Labs} : {Mechanical} {Engineering} : {Amrita} {Vishwa} {Vidyapeetham} {Virtual} {Lab}},
+	url = {https://vlab.amrita.edu/?sub=77&brch=297&sim=1700&cnt=3610},
+	urldate = {2022-06-06},
+	file = {Wind Tunnel -Pitot (Wind Tunnel Fundamentals) \: Wind energy Labs \: Mechanical Engineering \: Amrita Vishwa Vidyapeetham Virtual Lab:C\:\\Users\\samlo\\Zotero\\storage\\SRTNFSID\\vlab.amrita.edu.html:text/html},
+}
+
