--- a/Files/Chapter3.tex
+++ b/Files/Chapter3.tex
@@ -44,3 +44,21 @@ $$
 \vec{M}_e \\
 \end{Bmatrix} = [H]\{F\}
 $$
+
+\subsection{Velocity Measurement}
+An important part in wind tunnel measurements is the measure of pressure at specific points in the wind tunnel and computing the correspondingair speed. This is achieved by the use of a pitot probe. 
+\begin{center}
+\begin{figure}
+\centering
+\includegraphics{Figures/pitot}
+\caption[Pitot-static tube]{Pitot-static tube \cite{noauthor_wind_nodate}}
+\end{figure}
+\end{center}
+
+The equation relates the speed of the fluid at a point to both the mass density of the fluid and the pressures at the same point in the flow field. For steady flow of an incompressible fluid for which viscosity can be neglected, the fundamental equation has the form:
+
+$$ v = \sqrt{\frac{2(P_0 - P)}{\rho}}$$
+
+Where V is the speed of the fluid, P0 is the total, also called the stagnation, pressure at that point of measurement, and p is the static pressure at the same point.
+
+Three pitot probes are to be used in the wind tunnel, these are in the test section, intake and dissuser sections.
