--- a/Files/Chapter2.tex
+++ b/Files/Chapter2.tex
@@ -26,6 +26,8 @@ the whole system. There will be no bending moments in any of the members apart f
 	\caption{Linear co-ordinate control}
 	\end{figure}
 \end{center}
+The Stewart platform has drawn the interest of many researchers who have focused on solving kinematics, dynamics and control of the mechanism. Both inverse kinematic and forward kinematic methods for the Stewart platform are presented in literature
+\cite{csumnu2017simulation}.
 
 Stewart platforms that use screw jacks driven by electric motors as leg actuators have the advantage of being light and easy to control. Velocity and position control for these platforms can be done using shaft encoders and tachometers. A ball screw is used to minimize friction in a screw drive and backlash in the ball screw can be eliminated by use of double nuts preloaded with spring washers \cite{fichter1986stewart}.
 
