--- a/Bib/References.bib
+++ b/Bib/References.bib
@@ -401,3 +401,52 @@
   year={2017},
   publisher={Springer}
 }
+
+@article{fichter1986stewart,
+  title={A Stewart platform-based manipulator: general theory and practical construction},
+  author={Fichter, Eugene F},
+  journal={The international journal of robotics research},
+  volume={5},
+  number={2},
+  pages={157--182},
+  year={1986},
+  publisher={Sage Publications Sage CA: Thousand Oaks, CA}
+}
+
+
+@article{sumnu_simulation_2017,
+	title = {Simulation and {PID} control of a Stewart platform with linear motor},
+	volume = {31},
+	issn = {1738-494X, 1976-3824},
+	url = {http://link.springer.com/10.1007/s12206-016-1238-7},
+	doi = {10.1007/s12206-016-1238-7},
+	abstract = {In this study, kinematic analysis, dynamic analysis, simulation and control of Stewart platform with linear motor are presented. Using inverse kinematic method velocity and acceleration equations are derived. Lagrange and Newton-Euler equations are used to carry out dynamic analysis. Especially, in dynamic analysis, the lower part of leg inertia is taken into account. The required forces for the each actuator are calculated using {MATLAB} according to planned trajectories of the moving platform. Dynamic simulation of the system is presented both with and without inertial effect of the lower part of leg. Results of the dynamic simulation show that the effect of the lower part inertia of leg is important to obtain more accurate result. {PID} control of Stewart platform is performed using {MATLAB}/Simulink. Transfer function of the linear motor is derived and block diagram is obtained in Simulink. Finally, case studies are performed to verify the developed control system.},
+	pages = {345--356},
+	number = {1},
+	journaltitle = {Journal of Mechanical Science and Technology},
+	shortjournal = {J Mech Sci Technol},
+	author = {Şumnu, Ahmet and Güzelbey, İbrahim Halil and Çakir, Mehmet Veysel},
+	urldate = {2022-06-07},
+	date = {2017-01},
+	langid = {english},
+	file = {Şumnu et al. - 2017 - Simulation and PID control of a Stewart platform w.pdf:C\:\\Users\\earls\\Zotero\\storage\\YUT78I8K\\Şumnu et al. - 2017 - Simulation and PID control of a Stewart platform w.pdf:application/pdf},
+}
+
+
+@article{iqbal_dynamic_2008,
+	title = {Dynamic Analysis and Robust Control Design for Stewart Platform with Moving Payloads},
+	volume = {41},
+	issn = {14746670},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1474667016397907},
+	doi = {10.3182/20080706-5-KR-1001.00897},
+	abstract = {The novelty of the paper lies in an extended nonlinear model for the Stewart platform with moving payload. The models found in the existing literature are most of the time only valid for static loads with symmetric configurations, as reflected by the presumed assumption on Moments of Inertia ({MOI}) being static and symmetric. Such assumption precludes a wide range of systems having asymmetric or moving payloads e.g. stabilized platforms used to stabilize satellite antenna trackers or surgical tables etc. In this paper the actual {MOI} of the Stabilizing Stewart platform with moving payload are computed and used to parameterize the extended nonlinear model. This model is subsequently used for designing sliding mode controller. The control performance of the proposed algorithm is verified with computer simulations. These simulations demonstrate better stability properties and performance of the proposed dynamic model with much lower uncertainty bounds, as compared to that of the controller designed on the prevalent nonlinear model.},
+	pages = {5324--5329},
+	number = {2},
+	journaltitle = {{IFAC} Proceedings Volumes},
+	shortjournal = {{IFAC} Proceedings Volumes},
+	author = {Iqbal, S. and Bhatti, A.I. and Ahmed, Q.},
+	urldate = {2022-06-07},
+	date = {2008},
+	langid = {english},
+	file = {Iqbal et al. - 2008 - Dynamic Analysis and Robust Control Design for Ste.pdf:C\:\\Users\\earls\\Zotero\\storage\\SX4EVDBS\\Iqbal et al. - 2008 - Dynamic Analysis and Robust Control Design for Ste.pdf:application/pdf},
+}
