Update (Overview of Methodology)

--- a/Files/Chapter3.tex
+++ b/Files/Chapter3.tex
@@ -1,4 +1,5 @@
 \section{Methodology}
+This section deals with: design considerations, position, velocity and acceleration analysis of the Stewart platform. Both kinematic analysis and dynamic analysis will be looked at.
 \subsection{Force Sensor}
 \paragraph{}The force sensor module will be used to measure the force and moments from the aerodynamic loads applied on model being tested in the wind tunnel. The forces to be measured are the drag, lift and thrust as well as associated moments. For this subsystem two possible conceptual designs are to be considered:
 \begin{itemize}
