--- a/Files/Chapter3.tex
+++ b/Files/Chapter3.tex
@@ -7,6 +7,8 @@ This section deals with: design considerations, position, velocity and accelerat
 \item When the controllable axes are active, the platform must be controlled in six degrees of motion.
 \item When the controllable members are stationary the
 platform must have a corresponding fixed position.
+\item The mechanism should be light.
+\item Velocity and position control of the mechanism should be easy to achieve.
 \end{enumerate}
 \subsubsection{Kinematic Analysis}
 
