--- a/Main_file.tex
+++ b/Main_file.tex
@@ -10,6 +10,14 @@
 \usepackage{Styles/fancyheadings}
 \usepackage{tocloft}
 \usepackage[euler]{textgreek}
+%\usepackage{mathtools}
+%\usepackage{unicode-math}
+%\setmathfont{XITS Math}
+%\newcommand*{\matr}[1]{\mathbfit{#1}}
+%\newcommand*{\tran}{^\mkern-1.5mu\mathsf{T}}}
+%\newcommand*{\conj}[1]{\overline{#1}}
+%\newcommand*{\hermconj}{^{mathsf{H}}}
+\usepackage{MnSymbol}
 %-----Tex width---------------------------------
 \textwidth 16cm
 
