--- a/Main_file.tex
+++ b/Main_file.tex
@@ -18,6 +18,7 @@
 %\newcommand*{\conj}[1]{\overline{#1}}
 %\newcommand*{\hermconj}{^{mathsf{H}}}
 \usepackage{MnSymbol}
+%\usepackage{breqn}
 %-----Tex width---------------------------------
 \textwidth 16cm
 
