--- a/Files/Chapter3.tex
+++ b/Files/Chapter3.tex
@@ -115,6 +115,8 @@ u_{5}^{T} & (R_{P}^{B}q_{5}^{B} * u_{5})^T\\
 u_{6}^{T} & (R_{P}^{B}q_{6}^{B} * u_{6})^T
 \end{bmatrix}
 \]
+\subsubsection{PID Control of the Stewart Platform}
+Proportional-integral-derivative (PID) control is used to control the Stewart platform. A dynamic model of the system is implemented in MatLab/Simulink.
 \subsection{Force Sensor}
 \paragraph{}The force sensor module will be used to measure the force and moments from the aerodynamic loads applied on model being tested in the wind tunnel. The forces to be measured are the drag, lift and thrust as well as associated moments. For this subsystem two possible conceptual designs are to be considered:
 \begin{itemize}
